[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reddit_sentiment"
version = "0.0.1"
description = "This project analyzes sentiment in mental health-related Reddit posts during the COVID-19 pandemic using natural language processing (NLP) techniques. The goal is to quantify emotional tone across user posts from subreddits such as r/depression and r/anxiety and assess how sentiment may have shifted due to pandemic-related stressors"
authors = [
  { name = "Iker Cruz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["reddit_sentiment"]
include = ["pyproject.toml", "reddit_sentiment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["reddit_sentiment"]
force-sort-within-sections = true

